Can get all SOLD bikes, get number of sold bikes + total price, for a specific year