@@ -1,12 +1,16 @@
 package com.example.franxbackend.services;
 
-import com.example.franxbackend.dtos.BikeRequest;
 import com.example.franxbackend.dtos.BikeResponse;
 import com.example.franxbackend.entities.Bike;
 import com.example.franxbackend.entities.Status;
 import com.example.franxbackend.repositories.BikeStatisticRepository;
 import org.springframework.stereotype.Service;
 
+
+import java.time.LocalDate;
+import java.time.Month;
+import java.time.Period;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -15,26 +19,27 @@ public class BikeStatisticService {
 
     BikeStatisticRepository bikeStatisticRepository;
 
-
     public BikeStatisticService(BikeStatisticRepository bikeStatisticRepository) {
         this.bikeStatisticRepository = bikeStatisticRepository;
     }
 
-    public List<BikeResponse> getSoldBikes(){
-        List<Bike> bikes = bikeStatisticRepository.findBikeByStatus(Status.SOLD);
+    public List<BikeResponse> getSoldBikesYearly(int year){
+        List<Bike> bikesSoldGivenYear = bikeStatisticRepository
+                .findBikesByStatus(Status.SOLD);
+        bikesSoldGivenYear.removeIf(bike -> year != bike.getSellDate().getYear());
 
-        List<BikeResponse> soldBikes = bikes.stream().map(bike -> new BikeResponse(bike)).toList();
+        List<BikeResponse> response = bikesSoldGivenYear.stream().map(bike ->
+                new BikeResponse(bike)).collect(Collectors.toList());
 
-        return soldBikes;
+        return response;
     }
 
-    public int numberOfSoldBikes(){
-        List<BikeResponse> bikes = getSoldBikes();
-        return bikes.size();
+    public Integer getNumberOfSoldBikesYearly(int year){
+        return getSoldBikesYearly(year).size();
     }
 
-    public double totalPriceOfSoldBikes(){
-        List<BikeResponse> bikes = getSoldBikes();
+    public double totalPriceYearly(int year){
+        List<BikeResponse> bikes = getSoldBikesYearly(year);
         double totalPrice = 0;
 
         for (BikeResponse b: bikes) {
@@ -42,6 +47,9 @@ public class BikeStatisticService {
         }
         return totalPrice;
     }
+
+
+
 
 
 
